--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "@tanstack/react-query": "^5.22.2",
     "@types/styled-components": "^5.1.34",
+    "embla-carousel-react": "^8.0.0-rc23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
