--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "@tanstack/react-query": "^5.22.2",
     "@types/styled-components": "^5.1.34",
+    "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0-rc23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
