--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.22.2",
     "@types/react-responsive": "^8.0.8",
     "@types/styled-components": "^5.1.34",
@@ -21,6 +22,7 @@
     "embla-carousel-react": "^8.0.0-rc23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.1",
