--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.22.2",
     "@types/react-responsive": "^8.0.8",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.6.8",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0-rc23",
     "react": "^18.2.0",
